[project]
name = "comfylab-pack"
description = "Nodes: fully-customizable and versatile XY Plot grid, dynamic outputs from config files, Format String, various List utilities, ... visit the wiki for a complete list, tutorials and more."
version = "0.0.9"
authors = [{ name = "bugltd" }]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["jsonschema", "json5", "python-dotenv", "pyyaml", "pyaml"]

[project.urls]
Homepage = "https://github.com/bugltd/ComfyLab-Pack"
Documentation = "https://github.com/bugltd/ComfyLab-Pack/wiki"
Repository = "https://github.com/bugltd/ComfyLab-Pack"
Issues = "https://github.com/bugltd/ComfyLab-Pack/issues"
Changelog = "https://github.com/bugltd/ComfyLab-Pack/blob/main/CHANGELOG.md"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bugltd"
DisplayName = "ComfyLab Pack"
Icon = "https://i.postimg.cc/Cx5ZRzk5/Comfy-Lab-Icon-400.png"
